// Vitest Snapshot v1

exports[`context > getAllPages() > should work 1`] = `
[
  {
    "meta": {
      "theme": {
        "timestamp": false,
      },
      "type": "page",
    },
    "name": "404",
    "route": "/404",
  },
  {
    "meta": {
      "theme": {
        "layout": "full",
        "timestamp": false,
      },
      "type": "page",
    },
    "name": "500",
    "route": "/500",
  },
  {
    "frontMatter": {
      "searchable": false,
      "title": "React Hooks for Data Fetching",
    },
    "locale": "en-US",
    "meta": {
      "hidden": true,
      "title": "Introduction",
      "type": "page",
    },
    "name": "index",
    "route": "/",
  },
  {
    "frontMatter": {
      "title": "Biblioteca React Hooks para la obtención de datos",
    },
    "locale": "es-ES",
    "meta": {
      "hidden": true,
      "title": "Introduction",
      "type": "page",
    },
    "name": "index",
    "route": "/",
  },
  {
    "frontMatter": {
      "title": "データ取得のための React Hooks ライブラリ",
    },
    "locale": "ja",
    "meta": {
      "hidden": true,
      "title": "Introduction",
      "type": "page",
    },
    "name": "index",
    "route": "/",
  },
  {
    "frontMatter": {
      "title": "데이터 가져오기를 위한 React Hooks",
    },
    "locale": "ko",
    "meta": {
      "hidden": true,
      "title": "Introduction",
      "type": "page",
    },
    "name": "index",
    "route": "/",
  },
  {
    "frontMatter": {
      "title": "React хуки для получения данных",
    },
    "locale": "ru",
    "meta": {
      "hidden": true,
      "title": "Introduction",
      "type": "page",
    },
    "name": "index",
    "route": "/",
  },
  {
    "frontMatter": {
      "title": "用于数据请求的 React Hooks 库",
    },
    "locale": "zh-CN",
    "meta": {
      "hidden": true,
      "title": "Introduction",
      "type": "page",
    },
    "name": "index",
    "route": "/",
  },
  {
    "children": [
      {
        "locale": "en-US",
        "meta": {
          "title": "Getting Started",
        },
        "name": "getting-started",
        "route": "/docs/getting-started",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Getting Started",
        },
        "name": "getting-started",
        "route": "/docs/getting-started",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Getting Started",
        },
        "name": "getting-started",
        "route": "/docs/getting-started",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Getting Started",
        },
        "name": "getting-started",
        "route": "/docs/getting-started",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Getting Started",
        },
        "name": "getting-started",
        "route": "/docs/getting-started",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Getting Started",
        },
        "name": "getting-started",
        "route": "/docs/getting-started",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Options",
        },
        "name": "options",
        "route": "/docs/options",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Options",
        },
        "name": "options",
        "route": "/docs/options",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Options",
        },
        "name": "options",
        "route": "/docs/options",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Options",
        },
        "name": "options",
        "route": "/docs/options",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Options",
        },
        "name": "options",
        "route": "/docs/options",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Options",
        },
        "name": "options",
        "route": "/docs/options",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Global Configuration",
        },
        "name": "global-configuration",
        "route": "/docs/global-configuration",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Global Configuration",
        },
        "name": "global-configuration",
        "route": "/docs/global-configuration",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Global Configuration",
        },
        "name": "global-configuration",
        "route": "/docs/global-configuration",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Global Configuration",
        },
        "name": "global-configuration",
        "route": "/docs/global-configuration",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Global Configuration",
        },
        "name": "global-configuration",
        "route": "/docs/global-configuration",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Global Configuration",
        },
        "name": "global-configuration",
        "route": "/docs/global-configuration",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Data Fetching",
        },
        "name": "data-fetching",
        "route": "/docs/data-fetching",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Data Fetching",
        },
        "name": "data-fetching",
        "route": "/docs/data-fetching",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Data Fetching",
        },
        "name": "data-fetching",
        "route": "/docs/data-fetching",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Data Fetching",
        },
        "name": "data-fetching",
        "route": "/docs/data-fetching",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Data Fetching",
        },
        "name": "data-fetching",
        "route": "/docs/data-fetching",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Data Fetching",
        },
        "name": "data-fetching",
        "route": "/docs/data-fetching",
      },
      {
        "locale": "en-US",
        "meta": {
          "hidden": true,
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/docs/error-handling",
      },
      {
        "locale": "es-ES",
        "meta": {
          "hidden": true,
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/docs/error-handling",
      },
      {
        "locale": "ja",
        "meta": {
          "hidden": true,
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/docs/error-handling",
      },
      {
        "locale": "ko",
        "meta": {
          "hidden": true,
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/docs/error-handling",
      },
      {
        "locale": "ru",
        "meta": {
          "hidden": true,
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/docs/error-handling",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "hidden": true,
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/docs/error-handling",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Auto Revalidation",
        },
        "name": "revalidation",
        "route": "/docs/revalidation",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Auto Revalidation",
        },
        "name": "revalidation",
        "route": "/docs/revalidation",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Auto Revalidation",
        },
        "name": "revalidation",
        "route": "/docs/revalidation",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Auto Revalidation",
        },
        "name": "revalidation",
        "route": "/docs/revalidation",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Auto Revalidation",
        },
        "name": "revalidation",
        "route": "/docs/revalidation",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Auto Revalidation",
        },
        "name": "revalidation",
        "route": "/docs/revalidation",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Conditional Data Fetching",
        },
        "name": "conditional-fetching",
        "route": "/docs/conditional-fetching",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Conditional Data Fetching",
        },
        "name": "conditional-fetching",
        "route": "/docs/conditional-fetching",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Conditional Data Fetching",
        },
        "name": "conditional-fetching",
        "route": "/docs/conditional-fetching",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Conditional Data Fetching",
        },
        "name": "conditional-fetching",
        "route": "/docs/conditional-fetching",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Conditional Data Fetching",
        },
        "name": "conditional-fetching",
        "route": "/docs/conditional-fetching",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Conditional Data Fetching",
        },
        "name": "conditional-fetching",
        "route": "/docs/conditional-fetching",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Arguments",
        },
        "name": "arguments",
        "route": "/docs/arguments",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Arguments",
        },
        "name": "arguments",
        "route": "/docs/arguments",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Arguments",
        },
        "name": "arguments",
        "route": "/docs/arguments",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Arguments",
        },
        "name": "arguments",
        "route": "/docs/arguments",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Arguments",
        },
        "name": "arguments",
        "route": "/docs/arguments",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Arguments",
        },
        "name": "arguments",
        "route": "/docs/arguments",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Mutation",
        },
        "name": "mutation",
        "route": "/docs/mutation",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Mutation",
        },
        "name": "mutation",
        "route": "/docs/mutation",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Mutation",
        },
        "name": "mutation",
        "route": "/docs/mutation",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Mutation",
        },
        "name": "mutation",
        "route": "/docs/mutation",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Mutation",
        },
        "name": "mutation",
        "route": "/docs/mutation",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Mutation",
        },
        "name": "mutation",
        "route": "/docs/mutation",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Pagination",
        },
        "name": "pagination",
        "route": "/docs/pagination",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Pagination",
        },
        "name": "pagination",
        "route": "/docs/pagination",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Pagination",
        },
        "name": "pagination",
        "route": "/docs/pagination",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Pagination",
        },
        "name": "pagination",
        "route": "/docs/pagination",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Pagination",
        },
        "name": "pagination",
        "route": "/docs/pagination",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Pagination",
        },
        "name": "pagination",
        "route": "/docs/pagination",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Prefetching",
        },
        "name": "prefetching",
        "route": "/docs/prefetching",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Prefetching",
        },
        "name": "prefetching",
        "route": "/docs/prefetching",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Prefetching",
        },
        "name": "prefetching",
        "route": "/docs/prefetching",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Prefetching",
        },
        "name": "prefetching",
        "route": "/docs/prefetching",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Prefetching",
        },
        "name": "prefetching",
        "route": "/docs/prefetching",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Prefetching",
        },
        "name": "prefetching",
        "route": "/docs/prefetching",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Next.js SSG and SSR",
        },
        "name": "with-nextjs",
        "route": "/docs/with-nextjs",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Next.js SSG and SSR",
        },
        "name": "with-nextjs",
        "route": "/docs/with-nextjs",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Next.js SSG and SSR",
        },
        "name": "with-nextjs",
        "route": "/docs/with-nextjs",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Next.js SSG and SSR",
        },
        "name": "with-nextjs",
        "route": "/docs/with-nextjs",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Next.js SSG and SSR",
        },
        "name": "with-nextjs",
        "route": "/docs/with-nextjs",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Next.js SSG and SSR",
        },
        "name": "with-nextjs",
        "route": "/docs/with-nextjs",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "TypeScript :)",
        },
        "name": "typescript",
        "route": "/docs/typescript",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Suspense",
        },
        "name": "suspense",
        "route": "/docs/suspense",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Suspense",
        },
        "name": "suspense",
        "route": "/docs/suspense",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Suspense",
        },
        "name": "suspense",
        "route": "/docs/suspense",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Suspense",
        },
        "name": "suspense",
        "route": "/docs/suspense",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Suspense",
        },
        "name": "suspense",
        "route": "/docs/suspense",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Suspense",
        },
        "name": "suspense",
        "route": "/docs/suspense",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Middleware",
        },
        "name": "middleware",
        "route": "/docs/middleware",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Middleware",
        },
        "name": "middleware",
        "route": "/docs/middleware",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Middleware",
        },
        "name": "middleware",
        "route": "/docs/middleware",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Middleware",
        },
        "name": "middleware",
        "route": "/docs/middleware",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Middleware",
        },
        "name": "middleware",
        "route": "/docs/middleware",
      },
      {
        "children": [
          {
            "locale": "en-US",
            "meta": {
              "title": "Cache",
            },
            "name": "cache",
            "route": "/docs/advanced/cache",
          },
          {
            "locale": "ja",
            "meta": {
              "title": "Cache",
            },
            "name": "cache",
            "route": "/docs/advanced/cache",
          },
          {
            "locale": "ko",
            "meta": {
              "title": "Cache",
            },
            "name": "cache",
            "route": "/docs/advanced/cache",
          },
          {
            "locale": "ru",
            "meta": {
              "title": "Cache",
            },
            "name": "cache",
            "route": "/docs/advanced/cache",
          },
          {
            "locale": "zh-CN",
            "meta": {
              "title": "Cache",
            },
            "name": "cache",
            "route": "/docs/advanced/cache",
          },
          {
            "locale": "en-US",
            "meta": {
              "title": "Performance",
            },
            "name": "performance",
            "route": "/docs/advanced/performance",
          },
          {
            "locale": "es-ES",
            "meta": {
              "title": "Performance",
            },
            "name": "performance",
            "route": "/docs/advanced/performance",
          },
          {
            "locale": "ja",
            "meta": {
              "title": "Performance",
            },
            "name": "performance",
            "route": "/docs/advanced/performance",
          },
          {
            "locale": "ko",
            "meta": {
              "title": "Performance",
            },
            "name": "performance",
            "route": "/docs/advanced/performance",
          },
          {
            "locale": "ru",
            "meta": {
              "title": "Performance",
            },
            "name": "performance",
            "route": "/docs/advanced/performance",
          },
          {
            "locale": "zh-CN",
            "meta": {
              "title": "Performance",
            },
            "name": "performance",
            "route": "/docs/advanced/performance",
          },
          {
            "locale": "en-US",
            "meta": {
              "title": "React Native",
            },
            "name": "react-native",
            "route": "/docs/advanced/react-native",
          },
          {
            "locale": "ja",
            "meta": {
              "title": "React Native",
            },
            "name": "react-native",
            "route": "/docs/advanced/react-native",
          },
          {
            "locale": "ko",
            "meta": {
              "title": "React Native",
            },
            "name": "react-native",
            "route": "/docs/advanced/react-native",
          },
          {
            "locale": "ru",
            "meta": {
              "title": "React Native",
            },
            "name": "react-native",
            "route": "/docs/advanced/react-native",
          },
          {
            "locale": "zh-CN",
            "meta": {
              "title": "React Native",
            },
            "name": "react-native",
            "route": "/docs/advanced/react-native",
          },
          {
            "locale": "en-US",
            "meta": {
              "title": "Markdown import",
            },
            "name": "markdown-import",
            "route": "/docs/advanced/markdown-import",
          },
          {
            "children": [
              {
                "locale": "en-US",
                "meta": undefined,
                "name": "loooooooooooooooooooong-title",
                "route": "/docs/advanced/more/loooooooooooooooooooong-title",
              },
            ],
            "meta": {
              "title": "More: A Super Super Super Super Long Directory",
            },
            "name": "more",
            "route": "/docs/advanced/more",
          },
          {
            "locale": "en-US",
            "meta": {
              "title": "Filenames with dots",
            },
            "name": "file-name.with.DOTS",
            "route": "/docs/advanced/file-name.with.DOTS",
          },
          {
            "locale": "es-ES",
            "meta": {
              "title": "Filenames with dots",
            },
            "name": "file-name.with.DOTS",
            "route": "/docs/advanced/file-name.with.DOTS",
          },
          {
            "locale": "ja",
            "meta": {
              "title": "Filenames with dots",
            },
            "name": "file-name.with.DOTS",
            "route": "/docs/advanced/file-name.with.DOTS",
          },
          {
            "locale": "ko",
            "meta": {
              "title": "Filenames with dots",
            },
            "name": "file-name.with.DOTS",
            "route": "/docs/advanced/file-name.with.DOTS",
          },
          {
            "locale": "ru",
            "meta": {
              "title": "Filenames with dots",
            },
            "name": "file-name.with.DOTS",
            "route": "/docs/advanced/file-name.with.DOTS",
          },
          {
            "locale": "zh-CN",
            "meta": {
              "title": "Filenames with dots",
            },
            "name": "file-name.with.DOTS",
            "route": "/docs/advanced/file-name.with.DOTS",
          },
          {
            "locale": "en-US",
            "meta": {
              "title": "Code highlighting",
            },
            "name": "code-highlighting",
            "route": "/docs/advanced/code-highlighting",
          },
        ],
        "meta": {
          "title": "Advanced",
        },
        "name": "advanced",
        "route": "/docs/advanced",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Advanced",
        },
        "name": "advanced",
        "route": "/docs/advanced",
      },
      {
        "locale": "en-US",
        "meta": {
          "theme": {
            "sidebar": false,
          },
          "title": "Change Log",
        },
        "name": "change-log",
        "route": "/docs/change-log",
      },
      {
        "locale": "es-ES",
        "meta": {
          "theme": {
            "sidebar": false,
          },
          "title": "Change Log",
        },
        "name": "change-log",
        "route": "/docs/change-log",
      },
      {
        "locale": "ja",
        "meta": {
          "theme": {
            "sidebar": false,
          },
          "title": "Change Log",
        },
        "name": "change-log",
        "route": "/docs/change-log",
      },
      {
        "locale": "ko",
        "meta": {
          "theme": {
            "sidebar": false,
          },
          "title": "Change Log",
        },
        "name": "change-log",
        "route": "/docs/change-log",
      },
      {
        "locale": "ru",
        "meta": {
          "theme": {
            "sidebar": false,
          },
          "title": "Change Log",
        },
        "name": "change-log",
        "route": "/docs/change-log",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "theme": {
            "sidebar": false,
          },
          "title": "Change Log",
        },
        "name": "change-log",
        "route": "/docs/change-log",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Scroll With Dynamic Height",
        },
        "name": "scroll-with-dynamic-height",
        "route": "/docs/scroll-with-dynamic-height",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Scroll With Dynamic Height",
        },
        "name": "scroll-with-dynamic-height",
        "route": "/docs/scroll-with-dynamic-height",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Scroll With Dynamic Height",
        },
        "name": "scroll-with-dynamic-height",
        "route": "/docs/scroll-with-dynamic-height",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Scroll With Dynamic Height",
        },
        "name": "scroll-with-dynamic-height",
        "route": "/docs/scroll-with-dynamic-height",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Scroll With Dynamic Height",
        },
        "name": "scroll-with-dynamic-height",
        "route": "/docs/scroll-with-dynamic-height",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Scroll With Dynamic Height",
        },
        "name": "scroll-with-dynamic-height",
        "route": "/docs/scroll-with-dynamic-height",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "404/500 Custom Error Pages",
        },
        "name": "404-500",
        "route": "/docs/404-500",
      },
      {
        "locale": "en-US",
        "meta": {
          "theme": {
            "layout": "raw",
          },
          "title": "Raw Layout",
        },
        "name": "raw-layout",
        "route": "/docs/raw-layout",
      },
      {
        "locale": "en-US",
        "meta": undefined,
        "name": "code-block-without-language",
        "route": "/docs/code-block-without-language",
      },
    ],
    "meta": {
      "theme": {
        "toc": true,
      },
      "title": "Docs",
      "type": "page",
    },
    "name": "docs",
    "route": "/docs",
  },
  {
    "children": [
      {
        "locale": "en-US",
        "meta": {
          "title": "👥 Team",
        },
        "name": "team",
        "route": "/about/team",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "🧩 Acknowledgement",
        },
        "name": "acknowledgement",
        "route": "/about/acknowledgement",
      },
      {
        "locale": "en-US",
        "meta": {
          "hidden": true,
          "theme": {
            "layout": "raw",
          },
          "title": "A Page",
          "type": "page",
        },
        "name": "a-page",
        "route": "/about/a-page",
      },
    ],
    "meta": {
      "items": {
        "a-page": {
          "title": "A Page",
        },
        "acknowledgement": {
          "title": "Acknowledgement",
        },
        "contributors": {
          "href": "https://github.com/vercel/swr/graphs/contributors",
          "newWindow": true,
          "title": "Contributors",
        },
        "team": {
          "title": "Team",
        },
      },
      "title": "About",
      "type": "menu",
    },
    "name": "about",
    "route": "/about",
  },
  {
    "children": [
      {
        "frontMatter": {
          "full": true,
          "title": "Basic Usage",
        },
        "locale": "en-US",
        "meta": {
          "title": "Basic Usage",
        },
        "name": "basic",
        "route": "/examples/basic",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Uso Básico",
        },
        "locale": "es-ES",
        "meta": {
          "title": "Basic Usage",
        },
        "name": "basic",
        "route": "/examples/basic",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "基本的な使用法",
        },
        "locale": "ja",
        "meta": {
          "title": "Basic Usage",
        },
        "name": "basic",
        "route": "/examples/basic",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "기본 사용법",
        },
        "locale": "ko",
        "meta": {
          "title": "Basic Usage",
        },
        "name": "basic",
        "route": "/examples/basic",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Основное использование",
        },
        "locale": "ru",
        "meta": {
          "title": "Basic Usage",
        },
        "name": "basic",
        "route": "/examples/basic",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "基本用法",
        },
        "locale": "zh-CN",
        "meta": {
          "title": "Basic Usage",
        },
        "name": "basic",
        "route": "/examples/basic",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Authentication",
        },
        "locale": "en-US",
        "meta": {
          "title": "Authentication",
        },
        "name": "auth",
        "route": "/examples/auth",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Autenticación",
        },
        "locale": "es-ES",
        "meta": {
          "title": "Authentication",
        },
        "name": "auth",
        "route": "/examples/auth",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "認証",
        },
        "locale": "ja",
        "meta": {
          "title": "Authentication",
        },
        "name": "auth",
        "route": "/examples/auth",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "인증",
        },
        "locale": "ko",
        "meta": {
          "title": "Authentication",
        },
        "name": "auth",
        "route": "/examples/auth",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Аутентификация",
        },
        "locale": "ru",
        "meta": {
          "title": "Authentication",
        },
        "name": "auth",
        "route": "/examples/auth",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "身份验证",
        },
        "locale": "zh-CN",
        "meta": {
          "title": "Authentication",
        },
        "name": "auth",
        "route": "/examples/auth",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Infinite Loading",
        },
        "locale": "en-US",
        "meta": {
          "title": "Infinite Loading",
        },
        "name": "infinite-loading",
        "route": "/examples/infinite-loading",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Carga Infinita",
        },
        "locale": "es-ES",
        "meta": {
          "title": "Infinite Loading",
        },
        "name": "infinite-loading",
        "route": "/examples/infinite-loading",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "無限ローディング",
        },
        "locale": "ja",
        "meta": {
          "title": "Infinite Loading",
        },
        "name": "infinite-loading",
        "route": "/examples/infinite-loading",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "인피니트 로딩",
        },
        "locale": "ko",
        "meta": {
          "title": "Infinite Loading",
        },
        "name": "infinite-loading",
        "route": "/examples/infinite-loading",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Бесконечная загрузка",
        },
        "locale": "ru",
        "meta": {
          "title": "Infinite Loading",
        },
        "name": "infinite-loading",
        "route": "/examples/infinite-loading",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "无限加载",
        },
        "locale": "zh-CN",
        "meta": {
          "title": "Infinite Loading",
        },
        "name": "infinite-loading",
        "route": "/examples/infinite-loading",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Error Handling",
        },
        "locale": "en-US",
        "meta": {
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/examples/error-handling",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Manejo De Errores",
        },
        "locale": "es-ES",
        "meta": {
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/examples/error-handling",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "エラーハンドリング",
        },
        "locale": "ja",
        "meta": {
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/examples/error-handling",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "에러 처리",
        },
        "locale": "ko",
        "meta": {
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/examples/error-handling",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Обработка ошибок",
        },
        "locale": "ru",
        "meta": {
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/examples/error-handling",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "错误处理",
        },
        "locale": "zh-CN",
        "meta": {
          "title": "Error Handling",
        },
        "name": "error-handling",
        "route": "/examples/error-handling",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Next.js SSR",
        },
        "locale": "en-US",
        "meta": {
          "title": "Next.js SSR",
        },
        "name": "ssr",
        "route": "/examples/ssr",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Next.js SSR",
        },
        "locale": "ru",
        "meta": {
          "title": "Next.js SSR",
        },
        "name": "ssr",
        "route": "/examples/ssr",
      },
      {
        "locale": "en-US",
        "meta": {
          "theme": {
            "layout": "raw",
          },
          "title": "Full",
        },
        "name": "full",
        "route": "/examples/full",
      },
    ],
    "meta": {
      "theme": {
        "layout": "full",
      },
      "title": "Examples",
      "type": "page",
    },
    "name": "examples",
    "route": "/examples",
  },
  {
    "children": [
      {
        "frontMatter": {
          "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
          "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
        },
        "locale": "en-US",
        "meta": {
          "theme": {
            "breadcrumb": true,
          },
          "title": "Announcing SWR 1.0",
        },
        "name": "swr-v1",
        "route": "/blog/swr-v1",
      },
      {
        "frontMatter": {
          "description": "ほぼ二年前、みんなが愛する小さなデータフェッチ React ライブラリである SWR をオープンソースにしました。そして本日、私たちは大きな節目を迎えました： SWR の 1.0 バージョンです。",
          "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
        },
        "locale": "ja",
        "meta": {
          "theme": {
            "breadcrumb": true,
          },
          "title": "Announcing SWR 1.0",
        },
        "name": "swr-v1",
        "route": "/blog/swr-v1",
      },
      {
        "frontMatter": {
          "description": "Почти 2 года назад мы сделали SWR — крошечную React библиотеку с открытым исходным кодом для выборки данных, которую люди полюбили. Сегодня мы приближаемся к еще одной вехе: версии 1.0 SWR!",
          "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
        },
        "locale": "ru",
        "meta": {
          "theme": {
            "breadcrumb": true,
          },
          "title": "Announcing SWR 1.0",
        },
        "name": "swr-v1",
        "route": "/blog/swr-v1",
      },
      {
        "frontMatter": {
          "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
          "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
        },
        "locale": "zh-CN",
        "meta": {
          "theme": {
            "breadcrumb": true,
          },
          "title": "Announcing SWR 1.0",
        },
        "name": "swr-v1",
        "route": "/blog/swr-v1",
      },
    ],
    "meta": {
      "theme": {
        "breadcrumb": false,
        "footer": true,
        "sidebar": false,
        "toc": true,
        "typesetting": "article",
      },
      "title": "Blog",
      "type": "page",
    },
    "name": "blog",
    "route": "/blog",
  },
  {
    "frontMatter": {
      "searchable": false,
    },
    "locale": "en-US",
    "meta": {
      "theme": {
        "breadcrumb": false,
        "footer": true,
        "sidebar": false,
        "toc": true,
        "typesetting": "article",
      },
      "title": "Blog",
      "type": "page",
    },
    "name": "blog",
    "route": "/blog",
  },
]
`;

exports[`context > getCurrentLevelPages() > should work 1`] = `
[
  {
    "locale": "en-US",
    "meta": {
      "title": "Getting Started",
    },
    "name": "getting-started",
    "route": "/docs/getting-started",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Getting Started",
    },
    "name": "getting-started",
    "route": "/docs/getting-started",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Getting Started",
    },
    "name": "getting-started",
    "route": "/docs/getting-started",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Getting Started",
    },
    "name": "getting-started",
    "route": "/docs/getting-started",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Getting Started",
    },
    "name": "getting-started",
    "route": "/docs/getting-started",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Getting Started",
    },
    "name": "getting-started",
    "route": "/docs/getting-started",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Options",
    },
    "name": "options",
    "route": "/docs/options",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Options",
    },
    "name": "options",
    "route": "/docs/options",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Options",
    },
    "name": "options",
    "route": "/docs/options",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Options",
    },
    "name": "options",
    "route": "/docs/options",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Options",
    },
    "name": "options",
    "route": "/docs/options",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Options",
    },
    "name": "options",
    "route": "/docs/options",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Global Configuration",
    },
    "name": "global-configuration",
    "route": "/docs/global-configuration",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Global Configuration",
    },
    "name": "global-configuration",
    "route": "/docs/global-configuration",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Global Configuration",
    },
    "name": "global-configuration",
    "route": "/docs/global-configuration",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Global Configuration",
    },
    "name": "global-configuration",
    "route": "/docs/global-configuration",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Global Configuration",
    },
    "name": "global-configuration",
    "route": "/docs/global-configuration",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Global Configuration",
    },
    "name": "global-configuration",
    "route": "/docs/global-configuration",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Data Fetching",
    },
    "name": "data-fetching",
    "route": "/docs/data-fetching",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Data Fetching",
    },
    "name": "data-fetching",
    "route": "/docs/data-fetching",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Data Fetching",
    },
    "name": "data-fetching",
    "route": "/docs/data-fetching",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Data Fetching",
    },
    "name": "data-fetching",
    "route": "/docs/data-fetching",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Data Fetching",
    },
    "name": "data-fetching",
    "route": "/docs/data-fetching",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Data Fetching",
    },
    "name": "data-fetching",
    "route": "/docs/data-fetching",
  },
  {
    "locale": "en-US",
    "meta": {
      "hidden": true,
      "title": "Error Handling",
    },
    "name": "error-handling",
    "route": "/docs/error-handling",
  },
  {
    "locale": "es-ES",
    "meta": {
      "hidden": true,
      "title": "Error Handling",
    },
    "name": "error-handling",
    "route": "/docs/error-handling",
  },
  {
    "locale": "ja",
    "meta": {
      "hidden": true,
      "title": "Error Handling",
    },
    "name": "error-handling",
    "route": "/docs/error-handling",
  },
  {
    "locale": "ko",
    "meta": {
      "hidden": true,
      "title": "Error Handling",
    },
    "name": "error-handling",
    "route": "/docs/error-handling",
  },
  {
    "locale": "ru",
    "meta": {
      "hidden": true,
      "title": "Error Handling",
    },
    "name": "error-handling",
    "route": "/docs/error-handling",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "hidden": true,
      "title": "Error Handling",
    },
    "name": "error-handling",
    "route": "/docs/error-handling",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Auto Revalidation",
    },
    "name": "revalidation",
    "route": "/docs/revalidation",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Auto Revalidation",
    },
    "name": "revalidation",
    "route": "/docs/revalidation",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Auto Revalidation",
    },
    "name": "revalidation",
    "route": "/docs/revalidation",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Auto Revalidation",
    },
    "name": "revalidation",
    "route": "/docs/revalidation",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Auto Revalidation",
    },
    "name": "revalidation",
    "route": "/docs/revalidation",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Auto Revalidation",
    },
    "name": "revalidation",
    "route": "/docs/revalidation",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Conditional Data Fetching",
    },
    "name": "conditional-fetching",
    "route": "/docs/conditional-fetching",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Conditional Data Fetching",
    },
    "name": "conditional-fetching",
    "route": "/docs/conditional-fetching",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Conditional Data Fetching",
    },
    "name": "conditional-fetching",
    "route": "/docs/conditional-fetching",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Conditional Data Fetching",
    },
    "name": "conditional-fetching",
    "route": "/docs/conditional-fetching",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Conditional Data Fetching",
    },
    "name": "conditional-fetching",
    "route": "/docs/conditional-fetching",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Conditional Data Fetching",
    },
    "name": "conditional-fetching",
    "route": "/docs/conditional-fetching",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Arguments",
    },
    "name": "arguments",
    "route": "/docs/arguments",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Arguments",
    },
    "name": "arguments",
    "route": "/docs/arguments",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Arguments",
    },
    "name": "arguments",
    "route": "/docs/arguments",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Arguments",
    },
    "name": "arguments",
    "route": "/docs/arguments",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Arguments",
    },
    "name": "arguments",
    "route": "/docs/arguments",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Arguments",
    },
    "name": "arguments",
    "route": "/docs/arguments",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Mutation",
    },
    "name": "mutation",
    "route": "/docs/mutation",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Mutation",
    },
    "name": "mutation",
    "route": "/docs/mutation",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Mutation",
    },
    "name": "mutation",
    "route": "/docs/mutation",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Mutation",
    },
    "name": "mutation",
    "route": "/docs/mutation",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Mutation",
    },
    "name": "mutation",
    "route": "/docs/mutation",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Mutation",
    },
    "name": "mutation",
    "route": "/docs/mutation",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Pagination",
    },
    "name": "pagination",
    "route": "/docs/pagination",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Pagination",
    },
    "name": "pagination",
    "route": "/docs/pagination",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Pagination",
    },
    "name": "pagination",
    "route": "/docs/pagination",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Pagination",
    },
    "name": "pagination",
    "route": "/docs/pagination",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Pagination",
    },
    "name": "pagination",
    "route": "/docs/pagination",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Pagination",
    },
    "name": "pagination",
    "route": "/docs/pagination",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Prefetching",
    },
    "name": "prefetching",
    "route": "/docs/prefetching",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Prefetching",
    },
    "name": "prefetching",
    "route": "/docs/prefetching",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Prefetching",
    },
    "name": "prefetching",
    "route": "/docs/prefetching",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Prefetching",
    },
    "name": "prefetching",
    "route": "/docs/prefetching",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Prefetching",
    },
    "name": "prefetching",
    "route": "/docs/prefetching",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Prefetching",
    },
    "name": "prefetching",
    "route": "/docs/prefetching",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Next.js SSG and SSR",
    },
    "name": "with-nextjs",
    "route": "/docs/with-nextjs",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Next.js SSG and SSR",
    },
    "name": "with-nextjs",
    "route": "/docs/with-nextjs",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Next.js SSG and SSR",
    },
    "name": "with-nextjs",
    "route": "/docs/with-nextjs",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Next.js SSG and SSR",
    },
    "name": "with-nextjs",
    "route": "/docs/with-nextjs",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Next.js SSG and SSR",
    },
    "name": "with-nextjs",
    "route": "/docs/with-nextjs",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Next.js SSG and SSR",
    },
    "name": "with-nextjs",
    "route": "/docs/with-nextjs",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "TypeScript :)",
    },
    "name": "typescript",
    "route": "/docs/typescript",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Suspense",
    },
    "name": "suspense",
    "route": "/docs/suspense",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Suspense",
    },
    "name": "suspense",
    "route": "/docs/suspense",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Suspense",
    },
    "name": "suspense",
    "route": "/docs/suspense",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Suspense",
    },
    "name": "suspense",
    "route": "/docs/suspense",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Suspense",
    },
    "name": "suspense",
    "route": "/docs/suspense",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Suspense",
    },
    "name": "suspense",
    "route": "/docs/suspense",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Middleware",
    },
    "name": "middleware",
    "route": "/docs/middleware",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Middleware",
    },
    "name": "middleware",
    "route": "/docs/middleware",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Middleware",
    },
    "name": "middleware",
    "route": "/docs/middleware",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Middleware",
    },
    "name": "middleware",
    "route": "/docs/middleware",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Middleware",
    },
    "name": "middleware",
    "route": "/docs/middleware",
  },
  {
    "children": [
      {
        "locale": "en-US",
        "meta": {
          "title": "Cache",
        },
        "name": "cache",
        "route": "/docs/advanced/cache",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Cache",
        },
        "name": "cache",
        "route": "/docs/advanced/cache",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Cache",
        },
        "name": "cache",
        "route": "/docs/advanced/cache",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Cache",
        },
        "name": "cache",
        "route": "/docs/advanced/cache",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Cache",
        },
        "name": "cache",
        "route": "/docs/advanced/cache",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Performance",
        },
        "name": "performance",
        "route": "/docs/advanced/performance",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Performance",
        },
        "name": "performance",
        "route": "/docs/advanced/performance",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Performance",
        },
        "name": "performance",
        "route": "/docs/advanced/performance",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Performance",
        },
        "name": "performance",
        "route": "/docs/advanced/performance",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Performance",
        },
        "name": "performance",
        "route": "/docs/advanced/performance",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Performance",
        },
        "name": "performance",
        "route": "/docs/advanced/performance",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "React Native",
        },
        "name": "react-native",
        "route": "/docs/advanced/react-native",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "React Native",
        },
        "name": "react-native",
        "route": "/docs/advanced/react-native",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "React Native",
        },
        "name": "react-native",
        "route": "/docs/advanced/react-native",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "React Native",
        },
        "name": "react-native",
        "route": "/docs/advanced/react-native",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "React Native",
        },
        "name": "react-native",
        "route": "/docs/advanced/react-native",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Markdown import",
        },
        "name": "markdown-import",
        "route": "/docs/advanced/markdown-import",
      },
      {
        "children": [
          {
            "locale": "en-US",
            "meta": undefined,
            "name": "loooooooooooooooooooong-title",
            "route": "/docs/advanced/more/loooooooooooooooooooong-title",
          },
        ],
        "meta": {
          "title": "More: A Super Super Super Super Long Directory",
        },
        "name": "more",
        "route": "/docs/advanced/more",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Filenames with dots",
        },
        "name": "file-name.with.DOTS",
        "route": "/docs/advanced/file-name.with.DOTS",
      },
      {
        "locale": "es-ES",
        "meta": {
          "title": "Filenames with dots",
        },
        "name": "file-name.with.DOTS",
        "route": "/docs/advanced/file-name.with.DOTS",
      },
      {
        "locale": "ja",
        "meta": {
          "title": "Filenames with dots",
        },
        "name": "file-name.with.DOTS",
        "route": "/docs/advanced/file-name.with.DOTS",
      },
      {
        "locale": "ko",
        "meta": {
          "title": "Filenames with dots",
        },
        "name": "file-name.with.DOTS",
        "route": "/docs/advanced/file-name.with.DOTS",
      },
      {
        "locale": "ru",
        "meta": {
          "title": "Filenames with dots",
        },
        "name": "file-name.with.DOTS",
        "route": "/docs/advanced/file-name.with.DOTS",
      },
      {
        "locale": "zh-CN",
        "meta": {
          "title": "Filenames with dots",
        },
        "name": "file-name.with.DOTS",
        "route": "/docs/advanced/file-name.with.DOTS",
      },
      {
        "locale": "en-US",
        "meta": {
          "title": "Code highlighting",
        },
        "name": "code-highlighting",
        "route": "/docs/advanced/code-highlighting",
      },
    ],
    "meta": {
      "title": "Advanced",
    },
    "name": "advanced",
    "route": "/docs/advanced",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Advanced",
    },
    "name": "advanced",
    "route": "/docs/advanced",
  },
  {
    "locale": "en-US",
    "meta": {
      "theme": {
        "sidebar": false,
      },
      "title": "Change Log",
    },
    "name": "change-log",
    "route": "/docs/change-log",
  },
  {
    "locale": "es-ES",
    "meta": {
      "theme": {
        "sidebar": false,
      },
      "title": "Change Log",
    },
    "name": "change-log",
    "route": "/docs/change-log",
  },
  {
    "locale": "ja",
    "meta": {
      "theme": {
        "sidebar": false,
      },
      "title": "Change Log",
    },
    "name": "change-log",
    "route": "/docs/change-log",
  },
  {
    "locale": "ko",
    "meta": {
      "theme": {
        "sidebar": false,
      },
      "title": "Change Log",
    },
    "name": "change-log",
    "route": "/docs/change-log",
  },
  {
    "locale": "ru",
    "meta": {
      "theme": {
        "sidebar": false,
      },
      "title": "Change Log",
    },
    "name": "change-log",
    "route": "/docs/change-log",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "theme": {
        "sidebar": false,
      },
      "title": "Change Log",
    },
    "name": "change-log",
    "route": "/docs/change-log",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Scroll With Dynamic Height",
    },
    "name": "scroll-with-dynamic-height",
    "route": "/docs/scroll-with-dynamic-height",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Scroll With Dynamic Height",
    },
    "name": "scroll-with-dynamic-height",
    "route": "/docs/scroll-with-dynamic-height",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Scroll With Dynamic Height",
    },
    "name": "scroll-with-dynamic-height",
    "route": "/docs/scroll-with-dynamic-height",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Scroll With Dynamic Height",
    },
    "name": "scroll-with-dynamic-height",
    "route": "/docs/scroll-with-dynamic-height",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Scroll With Dynamic Height",
    },
    "name": "scroll-with-dynamic-height",
    "route": "/docs/scroll-with-dynamic-height",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Scroll With Dynamic Height",
    },
    "name": "scroll-with-dynamic-height",
    "route": "/docs/scroll-with-dynamic-height",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "404/500 Custom Error Pages",
    },
    "name": "404-500",
    "route": "/docs/404-500",
  },
  {
    "locale": "en-US",
    "meta": {
      "theme": {
        "layout": "raw",
      },
      "title": "Raw Layout",
    },
    "name": "raw-layout",
    "route": "/docs/raw-layout",
  },
  {
    "locale": "en-US",
    "meta": undefined,
    "name": "code-block-without-language",
    "route": "/docs/code-block-without-language",
  },
]
`;

exports[`context > getPagesUnderRoute() > should work 1`] = `
[
  {
    "locale": "en-US",
    "meta": {
      "title": "Cache",
    },
    "name": "cache",
    "route": "/docs/advanced/cache",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Cache",
    },
    "name": "cache",
    "route": "/docs/advanced/cache",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Cache",
    },
    "name": "cache",
    "route": "/docs/advanced/cache",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Cache",
    },
    "name": "cache",
    "route": "/docs/advanced/cache",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Cache",
    },
    "name": "cache",
    "route": "/docs/advanced/cache",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Performance",
    },
    "name": "performance",
    "route": "/docs/advanced/performance",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Performance",
    },
    "name": "performance",
    "route": "/docs/advanced/performance",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Performance",
    },
    "name": "performance",
    "route": "/docs/advanced/performance",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Performance",
    },
    "name": "performance",
    "route": "/docs/advanced/performance",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Performance",
    },
    "name": "performance",
    "route": "/docs/advanced/performance",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Performance",
    },
    "name": "performance",
    "route": "/docs/advanced/performance",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "React Native",
    },
    "name": "react-native",
    "route": "/docs/advanced/react-native",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "React Native",
    },
    "name": "react-native",
    "route": "/docs/advanced/react-native",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "React Native",
    },
    "name": "react-native",
    "route": "/docs/advanced/react-native",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "React Native",
    },
    "name": "react-native",
    "route": "/docs/advanced/react-native",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "React Native",
    },
    "name": "react-native",
    "route": "/docs/advanced/react-native",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Markdown import",
    },
    "name": "markdown-import",
    "route": "/docs/advanced/markdown-import",
  },
  {
    "children": [
      {
        "locale": "en-US",
        "meta": undefined,
        "name": "loooooooooooooooooooong-title",
        "route": "/docs/advanced/more/loooooooooooooooooooong-title",
      },
    ],
    "meta": {
      "title": "More: A Super Super Super Super Long Directory",
    },
    "name": "more",
    "route": "/docs/advanced/more",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Filenames with dots",
    },
    "name": "file-name.with.DOTS",
    "route": "/docs/advanced/file-name.with.DOTS",
  },
  {
    "locale": "es-ES",
    "meta": {
      "title": "Filenames with dots",
    },
    "name": "file-name.with.DOTS",
    "route": "/docs/advanced/file-name.with.DOTS",
  },
  {
    "locale": "ja",
    "meta": {
      "title": "Filenames with dots",
    },
    "name": "file-name.with.DOTS",
    "route": "/docs/advanced/file-name.with.DOTS",
  },
  {
    "locale": "ko",
    "meta": {
      "title": "Filenames with dots",
    },
    "name": "file-name.with.DOTS",
    "route": "/docs/advanced/file-name.with.DOTS",
  },
  {
    "locale": "ru",
    "meta": {
      "title": "Filenames with dots",
    },
    "name": "file-name.with.DOTS",
    "route": "/docs/advanced/file-name.with.DOTS",
  },
  {
    "locale": "zh-CN",
    "meta": {
      "title": "Filenames with dots",
    },
    "name": "file-name.with.DOTS",
    "route": "/docs/advanced/file-name.with.DOTS",
  },
  {
    "locale": "en-US",
    "meta": {
      "title": "Code highlighting",
    },
    "name": "code-highlighting",
    "route": "/docs/advanced/code-highlighting",
  },
]
`;
